--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.1.0",
     "babel-loader": "^8.2.5",
+    "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.4.2",
+    "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.5.2",
+    "use-immer": "^0.7.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
