--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-  "name": "complex_react_app",
+  "name": "complex-react-app",
   "version": "1.0.0",
   "description": "",
   "main": "test.js",
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "npm-run-all -s generate webpackDev",
+    "webpackDev": "webpack serve",
+    "build": "npm-run-all -s generate webpackBuild",
+    "webpackBuild": "webpack",
+    "generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHtml.js",
+    "previewDist": "node previewDist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-react": "^7.18.6",
-    "axios": "^1.1.0",
-    "babel-loader": "^8.2.5",
-    "immer": "^9.0.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.4.2",
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "axios": "^0.26.1",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^7.1.0",
+    "express": "^4.17.3",
+    "fs-extra": "^10.0.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "immer": "^9.0.12",
+    "npm-run-all": "^4.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-tooltip": "^4.2.21",
-    "react-transition-group": "^4.4.5",
-    "socket.io-client": "^4.5.2",
+    "react-transition-group": "^4.4.2",
+    "socket.io-client": "^4.4.1",
     "use-immer": "^0.7.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
